# mensor

./: .gitignore  .travis.yml  404.html  LICENSE  README.md  index.html  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: tests.yml
contributions/: index.html
docs/: concepts.rst  conf.py  contributions.rst  index.rst  installation.rst  make.bat  quickstart.rst
docsite/: Makefile  conf.py  contributions.rst  extensions.rst  index.rst  mkdocs.yml  quickstart.rst  requirements.txt  toy_schema.gv
docsite/docs/: contributions.md  index.md  installation.md
docsite/docs/guides/: concepts.md  index.md  quickstart.md
guides/: index.html
guides/concepts/: index.html
guides/quickstart/: index.html
installation/: index.html
mensor/: __init__.py  _version.py  constraints.py  context.py
mensor/backends/: pandas.py  sql.py
mensor/measures/: __init__.py  constraints.py  context.py  provider.py  registries.py  registry.py  stats.py  strategy.py  types.py
mensor/measures/common/: features.py
mensor/measures/evaluation/: strategy.py
mensor/measures/providers/: base.py  meta.py  mutable.py
mensor/measures/structures/: evaluated.py  feature_spec.py  features.py  join.py  meta.py  resolved.py  strategy.py
mensor/metrics/: __init__.py  registry.py  types.py
mensor/providers/: pandas.py  sql.py
mensor/utils/: __init__.py  registry.py
tests/: basic.py  conftest.py  test_constraints.py  test_pandas_provider.py  test_strategy.py
tests/data/: data_gen.py  geography_names.txt
tests/measures/backends/pandas/: test_pandas_provider.py
tests/measures/providers/: test_meta.py  test_provider.py  test_resolution.py
tests/measures/structures/: test_features.py
