[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mensor"
dynamic = ["version"]
description = "A dynamic graph-based metric computation engine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.5"
authors = [
    { name = "Matthew Wardrop", email = "mpwardrop@gmail.com" },
]
keywords = [
    "aggregation",
    "experimentation",
    "measures",
    "metrics",
    "statistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "interface_meta",
    "numpy",
    "pandas",
    "pyyaml",
    "scipy",
    "six",
    "uncertainties",
]

[project.urls]
Documentation = "http://mensor.readthedocs.io"
Homepage = "https://github.com/matthewwardrop/mensor"
"Issue Tracker" = "https://github.com/matthewwardrop/mensor/issues"
Source = "https://github.com/matthewwardrop/mensor"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "mensor/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "docsite",
    "mensor",
    "tests",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]

# Scripts and environments

[tool.hatch.envs.default]
dependencies = [
    "black==22.6",
    "flake8-pyproject",
    "flake8==5.0.4",
    "flake8-import-order",
    "pylint==2.14.5",
    "pytest-cov==4.0.0",
    "pytest==7.2.0",
]

[tool.hatch.envs.default.scripts]
tests = [
    "unit-tests",
    "linters",
]
unit-tests = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=mensor --cov-report=xml -vv tests"
linters = [
    "black --check mensor tests",
    "flake8 mensor",
    "pylint mensor",
]
format = "black mensor tests"

[[tool.hatch.envs.test.matrix]]
python = ["35", "36", "37", "38", "39", "310", "311"]

# Tooling Configuration

[tool.flake8]
ignore = [
    "D413",
    "E501",
    "E712",
    "E722",
    "W503",
    "W601",
]
import-order-style = "edited"
application-import-names = "mensor"

[tool.pydocstyle]
ignore = [
    "D413",
]
